--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -709,7 +709,7 @@ body, html {
     cursor: pointer;
 }
 .el-button--mini {
-    padding: 4px;
+    padding: 4px !important;
     font-size: 12px;
     border-radius: 3px;
 }
@@ -718,4 +718,8 @@ body, html {
     line-height: 50px;
     padding: 0 45px;
     min-width: 180px;
+}
+.el-message {
+    top: 80px;
+    /* z-index: 10000 !important; */
 }
